# electron-quick-start

./: .gitignore  hs.cabal  package-lock.json  renderer.js
js/: all.js
