name:                hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kayhide/hs#readme
license:             BSD3
license-file:        LICENSE.md
author:              kayhide
maintainer:          kayhide@gmail.com
copyright:           2017 kayhide
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      hs/src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
  default-language:    Haskell2010

executable hs-output
  hs-source-dirs:      hs/app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , hs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kayhide/hs